[package]
name = "kmanb"
version = "0.3.0-dev"
authors = ["François Mockers <mockersf@gmail.com>"]
edition = "2018"
license = "MIT"
publish = false

[dependencies]
bevy = { git = "https://github.com/mockersf/bevy", branch = "ld" }
serde = { version = "1.0", features = [ "derive" ] }
tracing = "0.1"
tracing-subscriber = "0.2"
rand = "0.7"
enum-utils = "0.1"
bevy_easings = { version = "0.1.0", default-features = false }
bevy_log_diagnostic = "0.1"
bevy_diagnostic_entity_count = { git = "https://github.com/mockersf/bevy_extra" }
bevy_ninepatch = "0.1.2"

config = { path = "config" }


[workspace]
members = [
    "config",
]


[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
incremental = false
codegen-units = 1


[patch.crates-io]
bevy = { git = "https://github.com/mockersf/bevy", branch = "ld" }
