[package]
name = "kmanb"
version = "0.3.0-dev"
authors = ["François Mockers <mockersf@gmail.com>"]
edition = "2018"
license = "MIT"
publish = false

[dependencies]
bevy = "0.3.0"
serde = { version = "1.0", features = [ "derive" ] }
tracing = "0.1"
tracing-subscriber = "0.2"
rand = "0.7"
enum-utils = "0.1"
lazy_static = "1.4"
bevy_easings = { version = "0.2", default-features = false }
bevy_ninepatch = "0.3"
bevy_log_diagnostic = "0.2"
# bevy_diagnostic_counter = { git = "https://github.com/mockersf/bevy_extra" }

config = { path = "crates/config" }
asset_io = { path = "crates/asset_io", optional = true }


[features]
default = ["bundled", "bevy/bevy_wgpu" ]
bundled = ["asset_io"]


[workspace]
members = [
    "crates/*",
]


[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
incremental = false
codegen-units = 1
