[package]
name = "kmanb"
version = "0.1.0"
authors = ["François Mockers <mockersf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/mockersf/bevy", branch = "read_loading" }
serde = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
rand = "0.7"
bevy_easings = "0.1.0"
bevy_log_diagnostic = "0.1"
bevy_diagnostic_entity_count = { git = "https://github.com/mockersf/bevy_extra" }
bevy_ninepatch = "0.1.2"

config = { path = "../config" }
